--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="unknown_error">Unknown error</string>
     <string name="error_loading_more_data">Error loading more data</string>
     <string name="author_format">Author format</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="welcome_back">Welcome back</string>
 
 </resources>
